too lazy to write commit message

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: WP Freelance
+Theme Name: WP Invoice
 Theme URI: https://geek.hellyer.kiwi/
 Author: Ryan Hellyer
 Author URI: https://geek.hellyer.kiwi/
