--- a/style.css
+++ b/style.css
@@ -21,22 +21,22 @@ GNU General Public License for more details.
 
 @font-face {
 	font-family: 'open-sans-light';
-	src: url('fonts/OpenSans-Light-webfont.eot');
-	src: url('fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/OpenSans-Light-webfont.woff') format('woff'),
-		 url('fonts/OpenSans-Light-webfont.ttf') format('truetype'),
-		 url('fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+	src: url('theme_directory_url/fonts/OpenSans-Light-webfont.eot');
+	src: url('theme_directory_url/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('theme_directory_url/fonts/OpenSans-Light-webfont.woff') format('woff'),
+		 url('theme_directory_url/fonts/OpenSans-Light-webfont.ttf') format('truetype'),
+		 url('theme_directory_url/fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'open-sans-regular';
-	src: url('fonts/OpenSans-Regular-webfont.eot');
-	src: url('fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/OpenSans-Regular-webfont.woff') format('woff'),
-		 url('fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
-		 url('fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+	src: url('theme_directory_url/fonts/OpenSans-Regular-webfont.eot');
+	src: url('theme_directory_url/fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('theme_directory_url/fonts/OpenSans-Regular-webfont.woff') format('woff'),
+		 url('theme_directory_url/fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+		 url('theme_directory_url/fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 
@@ -44,11 +44,11 @@ GNU General Public License for more details.
 
 @font-face {
 	font-family: 'open-sans-bold';
-	src: url('fonts/OpenSans-Bold-webfont.eot');
-	src: url('fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('fonts/OpenSans-Bold-webfont.woff') format('woff'),
-		 url('fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
-		 url('fonts/OpenSans-Bold-webfont.svg#open_sansregular') format('svg');
+	src: url('theme_directory_url/fonts/OpenSans-Bold-webfont.eot');
+	src: url('theme_directory_url/fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('theme_directory_url/fonts/OpenSans-Bold-webfont.woff') format('woff'),
+		 url('theme_directory_url/fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
+		 url('theme_directory_url/fonts/OpenSans-Bold-webfont.svg#open_sansregular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 
@@ -235,71 +235,14 @@ table {
 	font-size: 12px;
 	color: #000;
 	border-collapse: collapse;
+	background: #efefef;
 }
 
-tr:nth-child(1),
-tr:nth-child(3),
-tr:nth-child(5),
-tr:nth-child(7),
-tr:nth-child(9),
-tr:nth-child(11),
-tr:nth-child(13),
-tr:nth-child(15),
-tr:nth-child(17),
-tr:nth-child(19),
-tr:nth-child(21),
-tr:nth-child(23),
-tr:nth-child(25),
-tr:nth-child(27),
-tr:nth-child(29),
-tr:nth-child(31),
-tr:nth-child(33),
-tr:nth-child(35),
-tr:nth-child(37),
-tr:nth-child(39),
-tr:nth-child(41),
-tr:nth-child(43),
-tr:nth-child(45),
-tr:nth-child(47),
-tr:nth-child(49),
-tr:nth-child(51),
-tr:nth-child(53),
-tr:nth-child(55),
-tr:nth-child(57),
-tr:nth-child(59) {
+tr:nth-child(odd) {
 	background-color: #dedede;
 }
 
-tr:nth-child(2),
-tr:nth-child(4),
-tr:nth-child(6),
-tr:nth-child(8),
-tr:nth-child(10),
-tr:nth-child(12),
-tr:nth-child(14),
-tr:nth-child(16),
-tr:nth-child(18),
-tr:nth-child(20),
-tr:nth-child(22),
-tr:nth-child(24),
-tr:nth-child(26),
-tr:nth-child(28),
-tr:nth-child(30),
-tr:nth-child(32),
-tr:nth-child(34),
-tr:nth-child(36),
-tr:nth-child(38),
-tr:nth-child(40),
-tr:nth-child(42),
-tr:nth-child(44),
-tr:nth-child(46),
-tr:nth-child(48),
-tr:nth-child(50),
-tr:nth-child(52),
-tr:nth-child(54),
-tr:nth-child(56),
-tr:nth-child(58),
-tr:nth-child(60) {
+tr:nth-child(even) {
 	background-color: #efefef;
 }
 
@@ -367,8 +310,9 @@ td:nth-child(3) {
 
 /* Footer */
 footer {
-	position: fixed;
-	bottom: 0;
+	float: left;
+	margin-top: 2cm;
+	padding: 0.3cm 0;
 	clear: both;
 	display: block;
 	width: 800px;
@@ -393,7 +337,6 @@ footer p:nth-child(2) {
 	font-size: 12px;
 	font-family: open-sans-regular, monospace;
 }
-
 
 /* Print margins */
 @page {
